--- a/estilo.css
+++ b/estilo.css
@@ -5,6 +5,9 @@ body{
 }
 
 header{
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
     background-color:black ;
     height: 7vh;
     /* position: sticky;
@@ -30,19 +33,32 @@ header{
     width: 130vh;
 }
 #embaixoCarrosel{
-    background-color: gray;
+    
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
     height: 60vh;
     width: 130vh;
 }
 
 #textoComeco{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: blueviolet;
-    height: 50vh;
-    width: 80vh;
+    height: 50%;
+    width: 50%;
+
+}
+#imagemComeco{
+    background-image: url(imagensNaruto/imagemComeco.jpg);
+    background-size: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    width: 50%;
 
 }
 
