--- a/estilo.css
+++ b/estilo.css
@@ -10,8 +10,8 @@ header{
     justify-content:space-around;
     background-color:black ;
     height: 7vh;
-    /* position: sticky;
-    top: 0; */
+    position: sticky;
+    top: 0;
 }
 
 .menu{
@@ -26,6 +26,7 @@ header{
     align-items: center;
     justify-content: center;
     height: 100vh;
+    
 }
 #segundaParte{
     background-color: #D9D9D9;;
@@ -62,7 +63,7 @@ header{
     width: 69%;
     height: 100%;
     background-image: url(imagensNaruto/home1.jpg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     
     
@@ -73,7 +74,7 @@ header{
     width:29%;
     height: 100%;
     background-image: url(imagensNaruto/home2.jpg);
-    background-size: contain;
+    background-size: cover;
     
 }
 
