--- a/estilo.css
+++ b/estilo.css
@@ -112,12 +112,21 @@ header{
     display: flex;
     flex-direction: row-reverse;
 }
-.fotosDireita{
+.fotosDireitaNaruto{
     display: flex;
     align-items: center;
     width: 65%;
     height: 90vh;
     background-image: url(imagensNaruto/narutoPagina.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.fotosDireitaSasuke{
+    display: flex;
+    align-items: center;
+    width: 65%;
+    height: 90vh;
+    background-image: url(imagensNaruto/sasukePagina.jpg);
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -144,25 +153,105 @@ header{
 .nomeJapones{
     display: flex;
     align-self: flex-end;
-    writing-mode: vertical-rl;      
-    text-orientation: mixed;           /* muda o jeito de escrever  */
+    justify-content: flex-end;
+    writing-mode: vertical-rl;      /* escrever na vertical */
     letter-spacing: 10px;           /* espaço entre as letras  */
     height: 50%;
     width: 50%;
     font-size: 4.5vh;
     margin-right: 2%;
     color: white;
+
 }
 
 .sessaoPersonagemInverso{
-    background-color: #ffffff;
+    background-color: #949494;
     height: 100vh;
     display: flex;
-    flex-direction:row;
+    flex-direction:row-reverse;
     justify-content: space-around;
 }
 
+.esquerdaPersonagemInverso{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    height: 90vh;
+    margin: 5vh 5vh 5vh 5vh;
+}
 
+.textoPersonagemInverso{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 50%;
+    font-size: 5vh;
+    color: rgb(0, 0, 0)
+}
+.iconesPersonagemInverso{
+    width: 100%;
+    height: 50%;
+    /* background-color:blue; */
+}
+
+.direitaPersonagemInverso{
+    width: 50%;
+    height: 90vh;
+    margin: 5vh 5vh 5vh 5vh;
+    display: flex;
+    flex-direction: row;
+}
+.fotosDireitaSakura{
+    display: flex;
+    align-items: center;
+    width: 65%;
+    height: 90vh;
+    background-image: url(imagensNaruto/sakuraPagina.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 100%;
+}
+.fotosDireitaKakashi{
+    display: flex;
+    align-items: center;
+    width: 65%;
+    height: 90vh;
+    background-image: url(imagensNaruto/kakashiPagina.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 100%;
+}
+.nomeDireitaInverso{
+    width: 35%;
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-end; */
+}
+
+.nomePortuguesInverso{
+    display: flex;
+    align-self: flex-start;
+    height: 50%;
+    width: 50%;
+    font-size: 5vh;
+    margin-right: 4%; 
+    color: black;
+    text-align: left;
+}
+
+.nomeJaponesInverso{
+    display: flex;
+    align-self: flex-start;
+    writing-mode: vertical-rl;      /* escrever na vertical */
+    letter-spacing: 10px;           /* espaço entre as letras  */
+    height: 50%;
+    justify-content: flex-end;
+    font-size: 4.5vh;
+    margin-right: 2%;
+    color: black;
+}
 
 
 
