--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,8 @@
+*{margin: 0;
+padding: 0;
+}
+
+
 body{
     margin: 0;
     padding: 0;
@@ -6,10 +11,8 @@ body{
 
 header{
     display: flex;
-    align-items: center;
-    justify-content:space-around;
-    background-color:rgb(110, 57, 57) ;
-    height: 7vh;
+    background-color:rgb(0, 0, 0);
+    height: 10vh;
     position: sticky;
     top: 0;
 }
