--- a/estilo.css
+++ b/estilo.css
@@ -146,11 +146,11 @@ header{
     display: flex;
     align-self: flex-end;
     height: 50%;
-    width: 50%;
     font-size: 5vh;
-    margin-right: 4%; 
+    margin-right:3%; 
     color: white;
     text-align: right;
+    font-weight: bold;
 }
 
 .nomeJapones{
@@ -164,7 +164,7 @@ header{
     font-size: 4.5vh;
     margin-right: 2%;
     color: white;
-
+    font-weight: bold;
 }
 
 .sessaoPersonagemInverso{
@@ -190,7 +190,7 @@ header{
     width: 100%;
     height: 50%;
     font-size: 5vh;
-    color: rgb(0, 0, 0)
+    color: rgb(0, 0, 0);
 }
 .iconesPersonagemInverso{
     width: 100%;
@@ -239,9 +239,10 @@ header{
     height: 50%;
     width: 50%;
     font-size: 5vh;
-    margin-right: 4%; 
+    margin-left: 3%; 
     color: black;
     text-align: left;
+    font-weight: bold;
 }
 
 .nomeJaponesInverso{
@@ -254,7 +255,110 @@ header{
     font-size: 4.5vh;
     margin-right: 2%;
     color: black;
+    font-weight: bold;
 }
+
+.personagens{
+    height: 110vh;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.direitaPersonagens{
+    height: 100vh;
+    width: 48%;
+    /* background-color:rgb(225, 22, 178); */
+}
+
+.esquerdaPersonagens{
+    height: 100vh;
+    width: 48%;
+    background-color: rgb(239, 136, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.personagensCimaEsquerda{
+    display: flex;
+    flex-direction: row;
+    height: 48vh;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+}
+
+#Personagem{
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: end;
+}
+#fotoPersonagem{
+    height: 100%;
+    width: 70%;
+    background-image: url(imagensNaruto/2c89e315a4d255003777f8974cc15e01\ 1.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+#nomePersonagem{ 
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 25%;
+}
+#nomePortuges{
+    display: flex;
+    align-self: flex-start;
+    height: 50%;
+    width: 50%;
+    font-size: 3.5vh;
+    margin-left: 3%; 
+    color: black;
+    text-align: left;
+    font-weight: bold
+    
+}
+#nomeJapones{
+    display: flex;
+    height: 50%;
+    width: 50%;
+    align-self: flex-start;
+    writing-mode: vertical-rl;      
+    letter-spacing: 10px;  
+    justify-content: flex-end;
+    font-weight: bold;
+    font-size: 4.5vh;
+}
+
+
+
+
+
+
+
+
+
+
+#ino{
+    height: 100%;
+    width: 50%;
+    /* background-color: green; */
+}
+
+.personagensBaixoEsquerda{
+    height: 50vh;
+    width: 100%;
+    /* background-color: rgb(0, 0, 0); */
+}
+
+
+
+
+
+
 
 
 
