--- a/StyleHome.css
+++ b/StyleHome.css
@@ -32,7 +32,7 @@ header{
     
 }
 #segundaParte{
-    background-color: #D9D9D9;;
+    background-color: #FFC74F;
     height: 100vh;
     display: flex;
     flex-direction: column;
