--- a/stylehome2.css
+++ b/stylehome2.css
@@ -23,7 +23,7 @@
     height: 33%;
 }
 #header a{
-    font-size: xx-large;
+    font-size: 4vh;
     text-decoration: none;
     color: azure;
 }
@@ -35,7 +35,7 @@
     height: 33%;
     justify-content: flex-start;
     font-weight: bold;
-    font-size: x-large;
+    font-size: 5vh;
 }
 
 #texto{
@@ -45,7 +45,7 @@
     width: 100%;
     height: 33%;
     justify-content: space-evenly;
-    font-size: x-large;
+    font-size: 3vh;
 }
 
 #texto1{
@@ -68,7 +68,7 @@
     height: 100%;
 }
 #direita a{
-    font-size: xx-large;
+    font-size: 3vh;
     text-decoration: none;
     color: azure;
 }
