--- a/site/style.css
+++ b/site/style.css
@@ -42,7 +42,7 @@ body{
 #primeiraImagem{
     width: 69%;
     height: 100%;
-    background-image: url(imagensNaruto/home1.jpg);
+    background-image: url(imagens/);
     background-size: cover;
     background-repeat: no-repeat;
 }
