--- a/site/stylehome2.css
+++ b/site/stylehome2.css
@@ -7,20 +7,22 @@
     background-color: #FFC74F;
 }
 
-#esquerda{
+#esquerda {
     display: flex;
     flex-direction: column;
     width: 45%;
     height: 100%;
+    justify-content: center;
 }
 
-#header{
+#header {
     display: flex;
-    align-items:flex-start;
+    align-items: center;
     flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 33%;
+    justify-content: space-between;
+    width: 200vh;
+    height: 10%;
+    background-color: aquamarine;
 }
 #header a{
     font-size: 4vh;
@@ -81,13 +83,13 @@
     height: 30%;
 }
 
-#baixo{
+#baixo {
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-around;
     width: 100%;
-    height: 70%;
+    height: 100%;
 }
 
 #meio{
