--- a/site/style.css
+++ b/site/style.css
@@ -1,9 +1,32 @@
 body{
     margin: 0;
     padding: 0;
-    height: 500vh;
+}
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 8vh;
+    position: sticky;
+    top: 0;
+    background-color: rgba(255, 199, 79);
+}
+header a{
+    text-decoration: none;
+    color: black;
+    font-size: x-large;
 }
 
+.div_header{
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+    width: 9%;
+    height: 50%;
+    background-color: #949494;
+    border-radius: 35px;
+}
 #segundaParte{
     background-color: #FFC74F;
     height: 100vh;
@@ -50,11 +73,32 @@ body{
     
 }
 
-.sessaoPersonagem{
-    background-color: #272525;
-    height: 100vh;
+.sessaoPersonagemNaruto{
+    background-color: #FF7A03;
+    height: 855px;
     display: flex;
     flex-direction:row;
+    justify-content: space-around;
+}
+.sessaoPersonagemSasuke{
+    background-color: #2C1F3E;
+    height: 855px;
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around;
+}
+.sessaoPersonagemSakura{
+    background-color: #FAC8E3;
+    height: 855px;
+    display: flex;
+    flex-direction:row-reverse;
+    justify-content: space-around;
+}
+.sessaoPersonagemKakashi{
+    background-color: #CBCBCB;
+    height: 855px;
+    display: flex;
+    flex-direction:row-reverse;
     justify-content: space-around;
 }
 .esquerdaPersonagem{
@@ -82,7 +126,6 @@ body{
 
 .direitaPersonagem{
     width: 50%;
-    height: 90vh;
     margin: 5vh 5vh 5vh 5vh;
     display: flex;
     flex-direction: row-reverse;
@@ -91,7 +134,7 @@ body{
     display: flex;
     align-items: center;
     width: 65%;
-    height: 90vh;
+    height: 90%;
     background-image: url(imagensNaruto/narutoPagina.jpg);
     background-size: contain;
     background-repeat: no-repeat;
@@ -107,8 +150,7 @@ body{
 }
 .nomeDireita{
     width: 35%;
-    height: 90vh;
-    /* background-color: aqua; */
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -133,19 +175,13 @@ body{
     letter-spacing: 10px;           /* espaço entre as letras  */
     height: 50%;
     width: 50%;
-    font-size: 4.5vh;
+    font-size: 4vh;
     margin-right: 2%;
     color: white;
     font-weight: bold;
 }
 
-.sessaoPersonagemInverso{
-    background-color: #949494;
-    height: 100vh;
-    display: flex;
-    flex-direction:row-reverse;
-    justify-content: space-around;
-}
+
 
 .esquerdaPersonagemInverso{
     display: flex;
@@ -490,6 +526,70 @@ body{
 }
 
 footer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
     background-color: black;
-    height: 15vh;
+    height: 25vh;
+}
+
+footer a{
+    text-decoration: none;
+    color: white;
+
+}
+
+#footerPaginas{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    width: 20%;
+}
+
+#footerMeio{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    width: 55%;
+}
+
+#JornadaNinja{
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    width: 100%;
+    height: 33%;
+    color: white;
+    font-size: 200%;
+}
+#endereco{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: column;
+    width: 100%;
+    height: 33%;
+    color: white;
+}
+#Desenvolvido{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 33%;
+    font-size: 140%;
+    color: white;
+}
+#footerRedes{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    width: 20%;
 }
