--- a/site/stylehome2.css
+++ b/site/stylehome2.css
@@ -96,3 +96,183 @@
     background-image: url(Projeto-Individual-PI/imagens/gifnovo.webp);
     
 }
+
+      /* LOGIN CADASTRO */
+
+      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+html,body{
+  display: grid;
+  height: 100%;
+  width: 100%;
+  place-items: center;
+  background-color: #272525;
+}
+::selection{
+  background: #fa4299;
+  color: #fff;
+}
+.CaixaLoginCadastro{
+  overflow: hidden;
+  max-width: 390px;
+  background: #fff;
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+}
+.CaixaLoginCadastro .TextoTitulo{
+  display: flex;
+  width: 200%;
+}
+.CaixaLoginCadastro .dattebayo{
+  width: 50%;
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.CaixaLoginCadastro .SlideCima{
+  position: relative;
+  display: flex;
+  height: 50px;
+  width: 100%;
+  overflow: hidden;
+  margin: 30px 0 10px 0;
+  justify-content: space-between;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+}
+.SlideCima .slide{
+  height: 100%;
+  width: 100%;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 48px;
+  cursor: pointer;
+  z-index: 1;
+  
+}
+.SlideCima label.signup{
+  color: #000;
+}
+.SlideCima .slider-tab{
+  position: absolute;
+  height: 100%;
+  width: 50%;
+  left: 0;
+  z-index: 0;
+  border-radius: 5px;
+  background: -webkit-linear-gradient(left, #a445b2, #fa4299);
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+input[type="radio"]{
+  display: none;
+}
+#signup:checked ~ .slider-tab{
+  left: 50%;
+}
+#signup:checked ~ label.signup{
+  color: #fff;
+  cursor: default;
+  user-select: none;
+}
+#signup:checked ~ label.login{
+  color: #000;
+}
+#login:checked ~ label.signup{
+  color: #000;
+}
+#login:checked ~ label.login{
+  cursor: default;
+  user-select: none;
+}
+.CaixaLoginCadastro .EspaçoLoginCadastro{
+  width: 100%;
+  overflow: hidden;
+}
+.EspaçoLoginCadastro .SlideBaixo{
+  display: flex;
+  width: 200%;
+}
+.EspaçoLoginCadastro .SlideBaixo form{
+  width: 50%;
+  transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+.SlideBaixo form .inputDados{
+  height: 50px;
+  width: 100%;
+  margin-top: 20px;
+}
+.SlideBaixo form .inputDados input{
+  height: 100%;
+  width: 100%;
+  outline: none;
+  padding-left: 15px;
+  border-radius: 5px;
+  border: 1px solid lightgrey;
+  border-bottom-width: 2px;
+  font-size: 17px;
+  transition: all 0.3s ease;
+}
+.SlideBaixo form .inputDados input:focus{
+  border-color: #fc83bb;
+  /* box-shadow: inset 0 0 3px #fb6aae; */
+}
+.SlideBaixo form .inputDados input::placeholder{
+  color: #999;
+  transition: all 0.3s ease;
+}
+form .inputDados input:focus::placeholder{
+  color: #b3b3b3;
+}
+.SlideBaixo form .signup-link{
+  text-align: center;
+  margin-top: 30px;
+}
+.SlideBaixo form .signup-link a{
+  color: #fa4299;
+  text-decoration: none;
+}
+.SlideBaixo form .signup-link a:hover{
+  text-decoration: underline;
+}
+form .btn{
+  height: 50px;
+  width: 100%;
+  border-radius: 5px;
+  position: relative;
+  overflow: hidden;
+}
+form .btn .divBotao{
+  height: 100%;
+  width: 300%;
+  position: absolute;
+  left: -100%;
+  background: -webkit-linear-gradient(right, #a445b2, #fa4299, #a445b2, #fa4299);
+  border-radius: 5px;
+  transition: all 0.4s ease;;
+}
+form .btn:hover .divBotao{
+  left: 0;
+}
+form .btn input[type="submit"]{
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  padding-left: 0;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+}
