--- a/site/stylehome2.css
+++ b/site/stylehome2.css
@@ -159,7 +159,7 @@ html,body{
   z-index: 1;
   
 }
-.SlideCima label.signup{
+.SlideCima label.cadastro{
   color: #000;
 }
 .SlideCima .slider-tab{
@@ -169,24 +169,24 @@ html,body{
   left: 0;
   z-index: 0;
   border-radius: 5px;
-  background: -webkit-linear-gradient(left, #a445b2, #fa4299);
+  background: -webkit-linear-gradient(left, #FF7A03, #CBCBCB);
   transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
 }
 input[type="radio"]{
   display: none;
 }
-#signup:checked ~ .slider-tab{
+#cadastro:checked ~ .slider-tab{
   left: 50%;
 }
-#signup:checked ~ label.signup{
+#cadastro:checked ~ label.cadastro{
   color: #fff;
   cursor: default;
   user-select: none;
 }
-#signup:checked ~ label.login{
+#cadastro:checked ~ label.login{
   color: #000;
 }
-#login:checked ~ label.signup{
+#login:checked ~ label.cadastro{
   color: #000;
 }
 #login:checked ~ label.login{
@@ -222,8 +222,8 @@ input[type="radio"]{
   transition: all 0.3s ease;
 }
 .SlideBaixo form .inputDados input:focus{
-  border-color: #fc83bb;
-  /* box-shadow: inset 0 0 3px #fb6aae; */
+  border-color: #FF7A03;
+  box-shadow: inset 0 0 3px #fb6aae;
 }
 .SlideBaixo form .inputDados input::placeholder{
   color: #999;
@@ -232,15 +232,15 @@ input[type="radio"]{
 form .inputDados input:focus::placeholder{
   color: #b3b3b3;
 }
-.SlideBaixo form .signup-link{
+.SlideBaixo form .LinkCadastro{
   text-align: center;
   margin-top: 30px;
 }
-.SlideBaixo form .signup-link a{
-  color: #fa4299;
+.SlideBaixo form .LinkCadastro a{
+  color: #FF7A03;
   text-decoration: none;
 }
-.SlideBaixo form .signup-link a:hover{
+.SlideBaixo form .LinkCadastro a:hover{
   text-decoration: underline;
 }
 form .btn{
@@ -255,7 +255,7 @@ form .btn .divBotao{
   width: 300%;
   position: absolute;
   left: -100%;
-  background: -webkit-linear-gradient(right, #a445b2, #fa4299, #a445b2, #fa4299);
+  background: -webkit-linear-gradient(right, #FF7A03, #CBCBCB);
   border-radius: 5px;
   transition: all 0.4s ease;;
 }
