--- a/site/stylehome2.css
+++ b/site/stylehome2.css
@@ -114,7 +114,7 @@ html,body{
   background-color: #272525;
 }
 ::selection{
-  background: #fa4299;
+  background: #FF7A03;
   color: #fff;
 }
 .CaixaLoginCadastro{
@@ -169,7 +169,7 @@ html,body{
   left: 0;
   z-index: 0;
   border-radius: 5px;
-  background: -webkit-linear-gradient(left, #FF7A03, #CBCBCB);
+  background: -webkit-linear-gradient(left, #FF7A03, #FFC74F);
   transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
 }
 input[type="radio"]{
@@ -255,7 +255,7 @@ form .btn .divBotao{
   width: 300%;
   position: absolute;
   left: -100%;
-  background: -webkit-linear-gradient(right, #FF7A03, #CBCBCB);
+  background: -webkit-linear-gradient(right, #FF7A03, #FFC74F);
   border-radius: 5px;
   transition: all 0.4s ease;;
 }
