--- a/site/style.css
+++ b/site/style.css
@@ -106,7 +106,7 @@ header a{
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    height: 90vh;
+    height: 90%;
     margin: 5vh 5vh 5vh 5vh;
 }
 
@@ -133,9 +133,9 @@ header a{
 .fotosDireitaNaruto{
     display: flex;
     align-items: center;
-    width: 65%;
-    height: 90%;
-    background-image: url(imagensNaruto/narutoPagina.jpg);
+    width: 922px;
+    /* height: 90%; */
+    background-image: url(imagensNaruto/narutoPagina\ \(1\).jpg);
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -143,8 +143,8 @@ header a{
     display: flex;
     align-items: center;
     width: 65%;
-    height: 90vh;
-    background-image: url(imagensNaruto/sasukePagina.jpg);
+    /* height: 90%; */
+    background-image: url(imagensNaruto/sasukePagina1.jpg);
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -188,7 +188,7 @@ header a{
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    height: 90vh;
+    height: 90%;
     margin: 5vh 5vh 5vh 5vh;
 }
 
@@ -208,7 +208,7 @@ header a{
 
 .direitaPersonagemInverso{
     width: 50%;
-    height: 90vh;
+    height: 90%;
     margin: 5vh 5vh 5vh 5vh;
     display: flex;
     flex-direction: row;
@@ -217,8 +217,8 @@ header a{
     display: flex;
     align-items: center;
     width: 65%;
-    height: 90vh;
-    background-image: url(imagensNaruto/sakuraPagina.jpg);
+    /* height: 90%; */
+    background-image: url(imagensNaruto/sakuraPagina\ \(1\).jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 100%;
@@ -227,15 +227,15 @@ header a{
     display: flex;
     align-items: center;
     width: 65%;
-    height: 90vh;
-    background-image: url(imagensNaruto/kakashiPagina.jpg);
+    /* height: 90%; */
+    background-image: url(imagensNaruto/kakashiPagina\ \(1\).jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 100%;
 }
 .nomeDireitaInverso{
     width: 35%;
-    height: 90vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     /* align-items: flex-end; */
