--- a/site/stylehome2.css
+++ b/site/stylehome2.css
@@ -5,14 +5,17 @@
     width: 100%;
     height: 100vh;
     background-color: #FFC74F;
+    /* position: fixed; */
 }
 
 #esquerda {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     width: 45%;
     height: 100%;
-    justify-content: center;
+    align-self: center;
 }
 
 #header {
@@ -34,11 +37,31 @@
     align-items: flex-start;
     flex-direction: column;
     width: 100%;
-    height: 33%;
-    justify-content: flex-start;
+    height: 40%;
+    justify-content: space-evenly;
     font-weight: bold;
     font-size: 5vh;
 }
+
+#titulo2{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 100%;
+  height: 25%;
+  margin-left: 10%;
+}
+
+#titulo3{
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  width: 100%;
+  height: 25%;
+  margin-left: 10%;
+}
+
+
 
 #texto{
     display: flex;
@@ -58,6 +81,8 @@
     justify-content: center;
 }
 #texto2{
+  display: flex;
+  align-items: center;
     width: 100%;
     height: 50%;
 }
@@ -93,13 +118,14 @@
 }
 
 #meio{
-    background-image: url(Projeto-Individual-PI/imagens/gifnovo.webp);
+    background-image: url(Mode_Senin.webp);
+    background-size: cover;
+    width: 35%;
     
 }
 
       /* LOGIN CADASTRO */
 
-      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -111,7 +137,7 @@ html,body{
   height: 100%;
   width: 100%;
   place-items: center;
-  background-color: #272525;
+  /* background-color: #272525; */
 }
 .CaixaLoginCadastro{
   overflow: hidden;
