--- a/site/quiz/quiz.css
+++ b/site/quiz/quiz.css
@@ -31,7 +31,7 @@ body{
     box-shadow: 0 0 2px 2px;
 }
 
-.questions-container{
+.questoes-box{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -40,20 +40,20 @@ body{
     gap: 24px;
 }
 
-.questions{
+.questoes{
     text-align: center;
     font-weight: bold;
     font-size: 24px;
 }
 
-.answer-container{
+.resposta-box{
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 16px;
 }
 
-.next-question{
+.proximaQuestao{
     margin-top: 32px;
 }
 
@@ -73,6 +73,6 @@ body{
     background-color: rgb(231, 199, 140);
 }
 
-.hide{
+.esconder{
     display: none;
 }
