--- a/site/style.css
+++ b/site/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: #FFC74F;
 }
 header{
     display: flex;
@@ -10,7 +11,7 @@ header{
     height: 8vh;
     position: sticky;
     top: 0;
-    background-color: white;
+    /* background-color: #FFC74F; */
 }
 header a{
     display: flex;
@@ -36,7 +37,7 @@ header a{
     height: 50%;
     background: -webkit-linear-gradient(right, #FF7A03, #FFC74F);
     border-radius: 5px;
-    border: 1px solid lightgrey;
+    border: 1px solid #FFC74F;
 }
 
 #baixo a{
@@ -115,6 +116,7 @@ header a{
     background-image: url(imagensNaruto/home2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    
 }
 .partesHistoriaDireita{
     display: flex;
