--- a/site/stylehome2.css
+++ b/site/stylehome2.css
@@ -39,29 +39,37 @@
     width: 100%;
     height: 40%;
     justify-content: space-evenly;
-    font-weight: bold;
-    font-size: 5vh;
 }
-
+#titulo1{
+  display: flex;
+  align-items: center;
+  text-align:left;
+  width: 100%;
+  height: 50%;
+  margin-left: 8%;
+  font-size: 2.5vh;
+}
 #titulo2{
   display: flex;
   align-items: flex-start;
-  justify-content: flex-start;
+  text-align:left;
   width: 100%;
   height: 25%;
-  margin-left: 10%;
+  margin-left: 8%;
+  font-weight: bold;
+  font-size: 5vh;
 }
 
 #titulo3{
   display: flex;
   align-items: flex-end;
-  justify-content: flex-start;
+  text-align:left;
   width: 100%;
   height: 25%;
   margin-left: 10%;
+  font-weight: bold;
+  font-size: 5vh;
 }
-
-
 
 #texto{
     display: flex;
@@ -70,21 +78,26 @@
     width: 100%;
     height: 33%;
     justify-content: space-evenly;
-    font-size: 3vh;
+    font-size: 2.5vh;
 }
 
 #texto1{
-    width: 100%;
-    height: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  text-align:left;
+  width: 100%;
+  height: 50%;
+  margin-left: 10%;
+  font-size: 2.5vh;
 }
 #texto2{
   display: flex;
   align-items: center;
-    width: 100%;
-    height: 50%;
+  text-align:left;
+  width: 100%;
+  height: 50%;
+  margin-left: 10%;
+  font-size: 2.5vh;
 }
 
 #direita{
