--- a/site/public/css/stylehome2.css
+++ b/site/public/css/stylehome2.css
@@ -131,7 +131,7 @@
 }
 
 #meio{
-    background-image: url(imagensNaruto/Mode_Senin.webp);
+    background-image: url(../site/imagensNaruto/Mode_Senin.webp);
     background-size: cover;
     width: 35%;
     
