--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #FFC74F;
+    background-color: white;
 }
 header{
     display: flex;
@@ -11,23 +11,25 @@ header{
     height: 8vh;
     position: sticky;
     top: 0;
-    /* background-color: #FFC74F; */
+    background-image: url(../assets/header_kv_en.webp);
+    background-size: cover;
 }
 header a{
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    color: white;
+    color: black;
     font-size: x-large;
     width: 100%;
     height: 100%;
+    transition: 0.8s;
 }
 
-/* ::selection{
-    background: #FF7A03;
-    color: #fff;
-  } */
+header a:hover{
+    background-color: black;
+    color: white;
+}
 
 .div_header{
     display: flex;
@@ -35,9 +37,10 @@ header a{
     justify-content: center ;
     width: 9%;
     height: 50%;
-    background: -webkit-linear-gradient(right, #FF7A03, #FFC74F);
-    border-radius: 5px;
+    background-color: white;
     border: 1px solid #FFC74F;
+    border: 2px solid black;
+    color: black;
 }
 
 #baixo a{
@@ -46,189 +49,153 @@ header a{
     justify-content: center;
     width: 50%;
     height: 5%;
-    background: -webkit-linear-gradient(right, #FF7A03, #FFC74F);
-    border-radius: 5px;
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    transition: 0.8s;
+    font-size: 25px;
 }
+#baixo a:hover{
+    background-color: black;
+    color: white;
+}
+
+
+
         /* HISTORIA */
+
 .TelaGeralHistoria{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 300vh;
+    background-image: url(../assets/fundopretobranco.webp);
 }
-#segundaParte{
-    background-color: #FFC74F;
-    height: 50vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#tituloSobreOanime{
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    height: 8vh;
-    width: 40vh;
-    font-weight: bold;
-    font-size: 200%;
-}
-#textoSegundaParte{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    height: 55vh;
-    width: 150vh;
-    margin-bottom: 1vh;
-    margin-top: 1vh;
-    font-size: 4vh;
-}
-.partesHistoria{
+.telaClassico{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 80vh;
-    background-color: #949494;
+    height: 90vh;
+    background-image: url(../assets/);
 }
-.partesHistoriaEsquerda{
-    height: 100%;
-    width: 50%;
+.telaClassicoEsquerda{
     display: flex;
     flex-direction: column;
-}
-#TituloHistoriaEsquerda{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 15%;
-    font-weight: bold;
-    font-size:xx-large;
-}
-.ImagemHistoriaEsquerda{
-    display: flex;
+    justify-content: space-around;
     align-items: flex-start;
-    justify-content: center;
-    width: 100%;
-    height: 85%;
+    width: 50%;
+    height: 90%;
+    margin-left: 6%;
 }
-#ImagemHistoriaEsquerda{
-    width:75%;
-    height: 85%;
-    background-image: url(imagensNaruto/home2.jpg);
-    background-size: cover;
+.logoClassico{
+    width: 45%;
+    height: 25%;
+    background-image: url(../assets/logoNaruto.webp);
+    background-size: contain;
     background-repeat: no-repeat;
-    
 }
-.partesHistoriaDireita{
+.fotoNarutoClassico{
+    width: 50%;
+    height: 75%;
+    background-image: url(../assets/NarutoRasenganClassico.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.telaClassicoDireita{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 50%;
-    height: 100%;
+    height: 90%;
+    font-size:xx-large;
+    /* background-image: url(../assets/historiaClassico.webp); */
+    background-size:contain;
+    background-repeat: no-repeat;
 }
-.partesHistoriaDireita span{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 80%;
-    width: 65%;
-    font-size: x-large;
-}
-.partesHistoria2{
+
+.telaShippuden{
     display: flex;
     flex-direction: row-reverse;
-    width: 100%;
-    height: 80vh;
-    background-color:#272525;
-}
-
-.parteAntagonistas{
-    display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 90vh;
+}
+.telaShippudenEsquerda{
+    display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 80vh;
-    
-}
-.parteAntagonistas span{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width:30%;
-    height: 9%;
-    font-size: xx-large;
-}
-.Antagonistas{
-    display: flex;
-    flex-direction: row;
-    width:100%;
+    justify-content: space-around;
+    align-items: flex-end;
+    width: 50%;
     height: 90%;
 }
-#antagonistaClassico{
+.logoShippuden{
+    width: 45%;
+    height: 25%;
+    background-image: url(../assets/logoShippunden.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.fotoNarutoShippuden{
+    width: 50%;
+    height: 75%;
+    background-image: url(../assets/Mode_Senin.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.telaShippudenDireita{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 50%;
-    height: 100%;
-    background-color: #FFC74F;
-}
-.tituloAntagonista{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 10%;
-}
-.fotosAntagonistas{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-    width: 100%;
     height: 90%;
+    font-size:xx-large;
+    /* background-image: url(../assets/historiaShippuden.webp); */
+    background-size:contain;
+    background-repeat: no-repeat;
 }
-.fotosAntagonistas img{
-    width:20%;
-    height: 90%;
-}
 
 
 
 
-#antagonistaShippuden{
-    width: 50%;
-    height: 100%;
-    background-color:#CBCBCB;
-}
+
+
+
+
+
+
+
+
 
 
 
 
 
 .sessaoPersonagemNaruto{
-    background-color: #FF7A03;
+    background-image: url(../assets/NarutoFundo.jpg);
     height: 855px;
     display: flex;
     flex-direction:row;
     justify-content: space-around;
 }
 .sessaoPersonagemSasuke{
-    background-color: #2C1F3E;
+    background-image: url(../assets/FundoSasuke.jpg);
     height: 855px;
     display: flex;
     flex-direction:row;
     justify-content: space-around;
 }
 .sessaoPersonagemSakura{
-    background-color: #FAC8E3;
+    background-image: url(../assets/FundoSakura.jpg);
     height: 855px;
     display: flex;
     flex-direction:row-reverse;
     justify-content: space-around;
 }
 .sessaoPersonagemKakashi{
-    background-color: #CBCBCB;
+    background-image: url(../assets/KakashiFundo.jpg);
     height: 855px;
     display: flex;
     flex-direction:row-reverse;
@@ -597,7 +564,8 @@ header a{
     height: 1600px;
     width: 100%;
     display: flex;
-    background-color: #272525;
+    background-image: url(../assets/fundopretobranco.webp);
+    background-size: contain;
 }
 
 #sobreTitulo{
@@ -632,7 +600,6 @@ header a{
     justify-content:space-around;
     height: 725px;
     width: 100%;
-    background-color: aqua;
 }
 #sobreTexto{
     display: flex;
@@ -640,7 +607,6 @@ header a{
     height: 100%;
     width: 50%;
     font-size: 4vh;
-    /* background-color: #949494; */
     border-radius: 30px;
 }
 #sobreImagem{
@@ -649,7 +615,6 @@ header a{
     height: 75%;
     width: 30%;
     background-color: #949494;
-    /* border-radius: 30px; */
 }
 #sobrePreferido{
     display: flex;
@@ -658,7 +623,8 @@ header a{
     justify-content: space-between;
     height: 910px;
     width: 100%;
-    background-color: #FFC74F;
+    background-image: url(../assets/FundoMinato.jpg);
+    
 }
 #preferidoEsquerda{
     display: flex;
@@ -752,7 +718,9 @@ header a{
     align-items: center;
     height: 850px;
     width: 100%;
-    background-color: #272525;
+    background-color: #949494;
+    /* background-image: url(../assets/FundoManga2.jpg); */
+    background-size: contain;
 }
 .Episodios{
     display: flex;
