melhorias nas telas do time7 e sobremim

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -174,14 +174,14 @@ header a:hover{
 
 
 .sessaoPersonagemNaruto{
-    background-image: url(../assets/NarutoFundo.jpg);
+    background-image: url(../assets/NarutoFundo90.jpg);
     height: 855px;
     display: flex;
     flex-direction:row;
     justify-content: space-around;
 }
 .sessaoPersonagemSasuke{
-    background-image: url(../assets/FundoSasuke.jpg);
+    background-image: url(../assets/SasukeFundo.jpg);
     height: 855px;
     display: flex;
     flex-direction:row;
@@ -561,8 +561,10 @@ header a:hover{
 .sobreMim{
     display: flex;
     flex-direction: column;
-    height: 1600px;
+    align-items: center;
+    justify-content: space-around;
     width: 100%;
+    /* height: 400vh; */
     display: flex;
     background-image: url(../assets/fundopretobranco.webp);
     background-size: contain;
@@ -570,18 +572,19 @@ header a:hover{
 
 #sobreTitulo{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    height: 7%;
-    width: 100%;
+    width: 30%;
     font-size: 5vh;
     font-style: bold;
-    color: white;
+    color: black;
+    border: 2px solid black;
+    background-color: white;
 }
 #sobreInformações{
     display: flex;
     flex-direction: column;
-    height: 90%;
+    height: 1600px;
     width: 100%;
 }
 .sobre1{
@@ -589,7 +592,7 @@ header a:hover{
     align-items: center;
     flex-direction: row;
     justify-content:space-around;
-    height: 725px;
+    height: 50%;
     width: 100%;
 
 }
@@ -598,7 +601,7 @@ header a:hover{
     align-items: center;
     flex-direction: row;
     justify-content:space-around;
-    height: 725px;
+    height: 50%;
     width: 100%;
 }
 #sobreTexto{
@@ -623,7 +626,7 @@ header a:hover{
     justify-content: space-between;
     height: 910px;
     width: 100%;
-    background-image: url(../assets/FundoMinato.jpg);
+    background-image: url(../assets/MinatoFundo.jpg);
     
 }
 #preferidoEsquerda{
@@ -631,16 +634,19 @@ header a:hover{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 728px;
+    height: 90%;
     width: 45%;
 }
 .TitulosSobre{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 20%;
+    height: 10%;
     width: 100%;
     font-size: 250%;
+    background-color: white;
+    border: 2px solid black;
+    width: 50%;
 }
 #textoEsquerda{
     display: flex;
@@ -655,7 +661,7 @@ header a:hover{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 100%;
+    height: 90%;
     width: 55%;
 }
 #caixaImagens{
@@ -679,26 +685,34 @@ header a:hover{
     height: 10%;
     width: 70%;
     font-weight: bold;
-    font-size: xx-large;
+    font-size: 35px;
+}
+.MinatoPortugues1{
+    display: flex;
+    align-items: flex-end;
+    height: 10%;
+    width: 70%;
+    font-weight: bold;
+    font-size: 27px;
 }
 .fotoMinato1{
     height: 79%;
     width: 252px;
-    background-image: url(imagensNaruto/minato1.jpg);
+    background-image: url(../assets/minato1.jpg);
     background-size:cover;
     background-repeat: no-repeat;
 }
 .fotoMinato2{
     height: 79%;
     width: 252px;
-    background-image: url(imagensNaruto/minato2.jpg);
+    background-image: url(../assets/minato2.jpg);
     background-size:cover;
     background-repeat: no-repeat;
 }
 .fotoMinato3{
     height: 79%;
     width: 252px;
-    background-image: url(imagensNaruto/minato3.jpg);
+    background-image: url(../assets/minato3.jpg);
     background-size:contain;
     background-repeat: no-repeat;
 }
@@ -719,8 +733,8 @@ header a:hover{
     height: 850px;
     width: 100%;
     background-color: #949494;
-    /* background-image: url(../assets/FundoManga2.jpg); */
-    background-size: contain;
+    background-image: url(../assets/FundoTesteEP30.png);
+    background-size: cover;
 }
 .Episodios{
     display: flex;
@@ -732,11 +746,13 @@ header a:hover{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 20%;
-    width: 100%;
+    height: 10%;
+    width: 25%;
     font-weight: bold;
     font-size: 250%;
-    color: white;
+    background-color: white;
+    border: 2px solid black;
+    color: black;
 }
 .Episodio{
     display: flex;
