--- a/site/public/css/stylehome2.css
+++ b/site/public/css/stylehome2.css
@@ -159,8 +159,9 @@ html,body{
   max-width: 390px;
   background: #fff;
   padding: 30px;
-  border-radius: 5px;
   box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+  border: 2px solid black;
+
 }
 .CaixaLoginCadastro .TextoTitulo{
   display: flex;
