--- a/site/public/css/dash.css
+++ b/site/public/css/dash.css
@@ -3,11 +3,49 @@ body{
     background-size:contain;
 }
 
-.graficoLuminosidade {
-    width: 900px;
-    height: 500px;
+.EspacoGraficos{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 50%;
+    /* background-color: aqua; */
 }
-
+.graficoTop7Quiz {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 40%;
+    height: 80%;
+}
+.graficoTop7Quiz span{
+    display: flex;
+    justify-content: center;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    width: 50%;
+    font-size: 120%;
+}
+.graficoPersonagens{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 40%;
+    height: 80%;
+}
+.graficoPersonagens span{
+    display: flex;
+    justify-content: center;
+    border: 2px solid black;
+    color: black;
+    background-color: white;
+    width: 50%;
+    font-size: 120%;
+}
 .telaDash{
     display: flex;
     flex-direction: column;
