--- a/site/public/css/dash.css
+++ b/site/public/css/dash.css
@@ -2,25 +2,7 @@ body{
     background-image: url(../assets/fundopretobranco.webp);
     background-size:contain;
 }
-
-.EspacoGraficos{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    height: 50%;
-    /* background-color: aqua; */
-}
-.graficoTop7Quiz {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 40%;
-    height: 80%;
-}
-.graficoTop7Quiz span{
+span{
     display: flex;
     justify-content: center;
     border: 2px solid black;
@@ -28,6 +10,31 @@ body{
     background-color: white;
     width: 50%;
     font-size: 120%;
+}
+
+.telaDash{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+.graficosQuiz{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    height: 60%;
+}
+.graficos{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 30%;
+    height: 80%;
 }
 .graficoPersonagens{
     display: flex;
@@ -35,21 +42,7 @@ body{
     align-items: center;
     flex-direction: column;
     width: 40%;
-    height: 80%;
+    height: 30%;
 }
-.graficoPersonagens span{
-    display: flex;
-    justify-content: center;
-    border: 2px solid black;
-    color: black;
-    background-color: white;
-    width: 50%;
-    font-size: 120%;
-}
-.telaDash{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-}
+
 
