--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -20,7 +20,7 @@ header a{
     justify-content: center;
     text-decoration: none;
     color: black;
-    font-size: x-large;
+    font-size: 100%;
     width: 100%;
     height: 100%;
     transition: 0.8s;
@@ -156,47 +156,30 @@ header a:hover{
     background-size:contain;
     background-repeat: no-repeat;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .sessaoPersonagemNaruto{
     background-image: url(../assets/NarutoFundo90.jpg);
-    height: 855px;
+    height: 80vh;
     display: flex;
     flex-direction:row;
     justify-content: space-around;
 }
 .sessaoPersonagemSasuke{
     background-image: url(../assets/SasukeFundo.jpg);
-    height: 855px;
+    height: 80vh;
     display: flex;
     flex-direction:row;
     justify-content: space-around;
 }
 .sessaoPersonagemSakura{
     background-image: url(../assets/FundoSakura.jpg);
-    height: 855px;
+    height: 80vh;
     display: flex;
     flex-direction:row-reverse;
     justify-content: space-around;
 }
 .sessaoPersonagemKakashi{
     background-image: url(../assets/KakashiFundo.jpg);
-    height: 855px;
+    height: 80vh;
     display: flex;
     flex-direction:row-reverse;
     justify-content: space-around;
@@ -237,8 +220,7 @@ header a:hover{
 .fotosDireitaNaruto{
     display: flex;
     align-items: center;
-    width: 65%;
-    /* height: 90%; */
+    width: 65%;  
     background-image: url(../site/imagensNaruto/narutoPagina\ \(1\).jpg);
     background-size: cover;
     background-repeat: no-repeat;
