--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -3,18 +3,20 @@ body{
     padding: 0;
     background-color: white;
 }
-header{
+header {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     width: 100%;
     height: 8vh;
     position: sticky;
     top: 0;
     background-image: url(../assets/header_kv_en.webp);
     background-size: cover;
+    z-index: 1000; 
 }
-header a{
+
+header a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,10 +28,61 @@ header a{
     transition: 0.8s;
 }
 
-header a:hover{
+header a:hover {
     background-color: black;
     color: white;
 }
+
+.menu-container {
+    height: 50%;
+    width: 5%;
+    position: relative;
+}
+
+.menu-btn {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 100%;
+    transition: 0.8s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.menu-btn:hover {
+    background-color: black;
+    color: white;
+}
+
+.menu-options {
+    display: none;
+    position: absolute;
+    top: 8vh; /* Alinha o menu logo abaixo do header */
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid black;
+    z-index: 1001;
+    width: 100%
+}
+
+.menu-options a {
+    display: block;
+    padding: 5px 10px;
+    text-decoration: none;
+    color: black;
+    transition: 0.3s;
+    border: 1px solid black;
+}
+
+.menu-options a:hover {
+    background-color: black;
+    color: white;
+}
+
 
 .div_header{
     display: flex;
